formatting and style

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 			</div>
 			<div id="intro">
 				<div class="row">
-					<div class="col-lg-12">
+					<div class="col-lg-12 whitetext">
 						<p>We are so excited to invite you to join us on our big day.  We wouln't be where we are now without each and every one of you.  Washington DC is where we met and has become our home and we hope you can come and celebrate with us and enjoy some of our favorite places too!</p>
 						<p>Love, <br/>Allie and Matt</p>
 					</div>
@@ -198,7 +198,7 @@
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/jessi_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-8 whitetext">
 					            <p>Allie and I met 28 years ago on February 13, 1989 and it was on that day that she made me a big sister. I am sure my parents were also pretty excited about this addition to our family but I was fairly certain she was all mine. What I didn't know at that moment and would quickly learn is that Allie wasn't going to be my dress-up doll. She was going to be her own genuine and unique self, the one to make us laugh, remind us of the most obscure memory down to every detail, and the one who loves and cares so deeply. I truly admire this about Allie--her compassion and concern for others is unmatched. I am certain the phrase "all the feels" was written with Allie in mind. Paired with that compassion is her sense of humor and confident warmth. Allie has never met a stranger!</p>
 
 								<p>As we grew older, I watched Allie identify and foster friendships with people who, like her, are committed to doing good while not taking themselves too seriously. In that vein, it was during the summer of 2013 that a new person had joined her band of merry travelers...and with a leading role! Once Tim and I met Matt, we knew they were perfect complements. He is the calm to her excitement, the ready laughter to her humor (as she is to his), the sous chef eager to attempt their next kitchen masterpiece, and the "Uncle" to her "Aunt". Jack and Libby love few people more than their Aunt Allie and Uncle Matt and we are all so excited and honored to cheer them on and stand by their sides on their special day...and to clear the dance floor while they both tear it up! We love you, Allie and Matt.
@@ -214,7 +214,7 @@
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/alex_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-8 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -227,7 +227,7 @@
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/danielle_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-8 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -240,7 +240,7 @@
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/mathewson_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-8 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -253,7 +253,7 @@
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-8 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -266,7 +266,7 @@
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/webb_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-8 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -279,7 +279,7 @@
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/layne_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-8 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -292,7 +292,7 @@
 					        <div class="col-xs-4">
 								<img class="imgcell" src="assets/img/photos/meghan_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-8 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -443,7 +443,7 @@
 				<div class="col-xs-4">
 					<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 whitetext">
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 					Phone <a href="tel:2026951100">(202) 695-1100</a> <br/>
 					Website <a href="https://www.trumphotels.com/washington-dc/luxury-washington-dc-hotels">Click Here</a> <br/>
@@ -460,7 +460,7 @@
 				<div class="col-xs-4">
 					<img class="imgcell" src="assets/img/photos/hyatt_320x320.jpg"/>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 whitetext">
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 					Phone <a href="tel:2025821234">(202) 582-1234</a><br/>
 					Website <a href="https://washingtondc.grand.hyatt.com/en/hotel/home.html">Click Here</a> <br/>
@@ -477,7 +477,7 @@
 				<div class="col-xs-4">
 					<img class="imgcell" src="assets/img/photos/marriott_320x320.jpg"/>
 				</div>
-				<div class="col-lg-8">
+				<div class="col-lg-8 whitetext">
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 					Phone <a href="tel:2023932000">(202) 393-2000</a><br/>
 					Website <a href="http://www.marriott.com/hotels/travel/wasjw-jw-marriott-washington-dc/">Click Here</a> <br/>
@@ -494,7 +494,7 @@
 				<h1>Schedule of Events</h1>
 			</div>
 			<div class="col-lg-3">
-				<a href="assets/other/alliemattwedding.ics"><i class="icon-file"></i></a>Add Events To Calendar
+				<a href="assets/other/alliemattwedding.ics">Add Events To Calendar <i class="icon-calendar"></i></a>
 			</div>
 		</div>
 		<div class="container-fluid">
@@ -689,17 +689,17 @@
 					<div class="row">
 						<div class="col-xs-3 righttext">Reagan National Airport</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">Baltimore Washington International Airport</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">Dulles International Airport</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 				</div>
 			</div>
@@ -711,7 +711,7 @@
 					<div class="row">
 						<div class="col-xs-3 righttext">Amtrak Union Station</div>
 						<div class="col-xs-3 centered"><a href="https://www.amtrak.com/servlet/ContentServer?pagename=am/am2Station/Station_Page&code=WAS">Amtrack Website</a></div>
-						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 				</div>
 			</div>
@@ -723,27 +723,27 @@
 					<div class="row">
 						<div class="col-xs-3 righttext">From BWI and I-95 from the North</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">From Pittsburgh and I-270 from the North</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">From Dulles</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">I-95 from the South</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 					<div class="row">
 						<div class="col-xs-3 righttext">From Reagan</div>
 						<div class="col-xs-3 centered">Click here</div>
-						<div class="col-xs-6"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
+						<div class="col-xs-6 whitetext"><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p></div>
 					</div>
 				</div>
 			</div>
@@ -763,26 +763,14 @@
 				</div>
 				<div class="col-lg-6">
 					<p><t>Email</t><br/>
-						william@blacktie.co <br/>
-					</p>
-					<p><t>Adress</t><br/>
-						Some Ave. 987 <br/>
-						Postal 23892 <br/>
-						London, England. <br/>
-					</p>
-					<p><t>Phone</t><br/>
-						+55 8933-2383 <br/>
+						info@alliemethermatt.com <br/>
 					</p>
 				</div>
 				<div class="col-lg-3">
 					<p><sm>SOCIAL LINKS</sm></p>
 					<p>
-						<a href="#"><i class="icon-dribbble"></i></a>
-						<a href="#"><i class="icon-twitter"></i></a>
-						<a href="#"><i class="icon-facebook"></i></a>
-						<a href="#"><i class="icon-linkedin"></i></a>
-						<a href="#"><i class="icon-apple"></i></a>
-
+						<a href="https://twitter.com/search?f=tweets&q=%23alliemethermatt&src=typd"><i class="icon-twitter"></i> Twitter</a><br/>
+						<a href="https://www.instagram.com/explore/tags/alliemethermatt/"><i class="icon-instagram"></i> Instagram</a>
 					</p>
 				</div>
 			</div><!--/.row -->
@@ -791,7 +779,7 @@
 	
 	<div id="c">
 		<div class="container-fluid">
-			<p>Created by <a href="http://www.blacktie.co">BLACKTIE.CO</a></p>
+			<p>stuff goes here</p>
 		
 		</div>
 	</div>
