--- a/index.html
+++ b/index.html
@@ -385,7 +385,9 @@
 								<img class="imgcell" src="assets/img/photos/davis_320x320.jpg"/>
 					        </div>
 					        <div class="col-lg-8">
-					            <p> your story here</p>
+					            <p>I feel like it's rare that you can remember the first time you saw someone that isn't a romantic connection, but I can vividly recall when I first saw Slocum with Matt Daniels at a bus stop waiting to go to frats during the first few days at Penn State - you couldn't miss this odd couple. Soon, Slocum was my pledge class president as we pledged at Sig Chi. Little did I know then just how much this guy would change my life...I owe my marriage to him. He helped to set me up with my now wife way back during our Freshman year of college. Stacy and I were both too shy to make a first move, but Slocum the social butterfly had no problem getting us to hang out more often and exchange AOL instant messenger screen names.</p>
+					            <p>Fast forward nine years and Slocum and his then girlfriend Allie were the first of our friends to come visit us in Pittsburgh after the birth of our first child. Not surprising in the least - that is just the type of guy and friend that he is.</p>
+					            <p>During that nine year time gap, there were countless hilarious moments, hundreds of hours of aimless chatting (a few were actually serious), and lots and lots of beer. But best of all, I became lifelong friends with a guy who is always genuine and caring, and is sometimes funny. Best wishes Allie and Matt, and thanks for letting me be part of your celebration.</p>
 					        </div>
 			</div>
 			<div class="row">
