--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           	<ul class="nav navbar-nav">
-				<li class="menu-item"><a href="#welcomewrap" title="Welcome">Welcome</a></li>
-				<li class="menu-item"><a href="#ourstory" title="Our Story">Our Story</a></li>
-				<li class="menu-item"><a href="#weddingparty" title="Wedding Party">Wedding Party</a></li>
-				<li class="menu-item"><a href="#accommodations" title="Accomodations">Accomodations</a></li>
-				<li class="menu-item"><a href="#scheduleofevents" title="Schedule">Schedule</a></li>
-				<li class="menu-item"><a href="#registry" title="Registry">Registry</a></li>
-				<li class="menu-item"><a href="#whattodo" title="What To Do">What To Do</a></li>
-				<li class="menu-item"><a href="#travel" title="Travel">Travel</a></li>
+				<li><a href="#welcomewrap" title="Welcome">Welcome</a></li>
+				<li><a href="#ourstory" title="Our Story">Our Story</a></li>
+				<li><a href="#weddingparty" title="Wedding Party">Wedding Party</a></li>
+				<li><a href="#accommodations" title="Accomodations">Accomodations</a></li>
+				<li><a href="#scheduleofevents" title="Schedule">Schedule</a></li>
+				<li><a href="#registry" title="Registry">Registry</a></li>
+				<li><a href="#whattodo" title="What To Do">What To Do</a></li>
+				<li><a href="#travel" title="Travel">Travel</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -110,7 +110,7 @@
 	</div><!--/.#headerwrap -->
 	
 	<section id="about" name="about"></section>
-	<div id="welcomewrap">
+	<div id="welcomewrap" class="top-edge-shadow">
 		<div class="container-fluid">
 			<div class="row">
 				<div id="hometop" class="col-lg-11">
@@ -131,7 +131,7 @@
 
 	<section id="ourstory" name="ourstory"></section>
 	<!--our story-->
-	<div class="container-fluid desc">
+	<div class="container-fluid desc bottom-edge-shadow">
 	<div class="row">
 		<div class="col-lg-11">
 			<h1>Our Story</h1>
@@ -180,7 +180,7 @@
 
 	<!--Wedding party -->
 	
-	<div id="weddingparty">
+	<div id="weddingparty" class="top-edge-shadow">
 	<div class="container-fluid">	
 		<div class="row">
 			<div class="col-lg-11">
@@ -301,7 +301,7 @@
 	</div><!--/ #skillswrap -->
 
 	<section id="groomsman" name="groomsman"></section>
-	<div id="groomsman">
+	<div id="groomsman" class="bottom-edge-shadow">
 		<div class="container-fluid">	
 			<div class="row">
 				<div class="col-lg-11">
@@ -422,7 +422,7 @@
 	</div>
 
 	<section id="accommodations" name="accommodations"></section>
-	<div id="accommodationswrap">
+	<div id="accommodationswrap" class="top-edge-shadow">
 		<div class="row">
 			<div class="col-lg-12">
 				<h1>Accomodations</h1>
@@ -490,7 +490,7 @@
 	</div>
 
 	<section id="scheduleofevents" name="scheduleofevents"></section>
-	<div id="scheduleofevents">
+	<div id="scheduleofevents" class="bottom-edge-shadow">
 		<div class="row">
 			<div class="col-lg-8 col-lg-offset-1">
 				<h1>Schedule of Events</h1>
@@ -571,7 +571,7 @@
 	</div>
 
 	<section id="registry" name="registry"></section>
-	<div id="registrywrap">
+	<div id="registrywrap" class="top-edge-shadow">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
 				<h1>Registry</h1>
@@ -600,7 +600,7 @@
 	</div>
 
 	<section id="whattodo" name="whattodo"></section>
-	<div id="whattodo">
+	<div id="whattodo" class="bottom-edge-shadow">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
 				<h1>Washington, D.C.</h1>
@@ -676,7 +676,7 @@
 	</div>
 
 	<section id="travel" name="travel"></section>
-	<div id="travelwrap">
+	<div id="travelwrap" class="top-edge-shadow">
 		<div class="row">
 			<div class="col-lg-11 col-lg-offset-1">
 				<h1>Travel</h1>
