more photo formatting and the registry images

--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/jessi_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/jessi_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8 whitetext">
+					        <div class="col-lg-7 whitetext">
 					            <p>Allie and I met 28 years ago on February 13, 1989 and it was on that day that she made me a big sister. I am sure my parents were also pretty excited about this addition to our family but I was fairly certain she was all mine. What I didn't know at that moment and would quickly learn is that Allie wasn't going to be my dress-up doll. She was going to be her own genuine and unique self, the one to make us laugh, remind us of the most obscure memory down to every detail, and the one who loves and cares so deeply. I truly admire this about Allie--her compassion and concern for others is unmatched. I am certain the phrase "all the feels" was written with Allie in mind. Paired with that compassion is her sense of humor and confident warmth. Allie has never met a stranger!</p>
 
 								<p>As we grew older, I watched Allie identify and foster friendships with people who, like her, are committed to doing good while not taking themselves too seriously. In that vein, it was during the summer of 2013 that a new person had joined her band of merry travelers...and with a leading role! Once Tim and I met Matt, we knew they were perfect complements. He is the calm to her excitement, the ready laughter to her humor (as she is to his), the sous chef eager to attempt their next kitchen masterpiece, and the "Uncle" to her "Aunt". Jack and Libby love few people more than their Aunt Allie and Uncle Matt and we are all so excited and honored to cheer them on and stand by their sides on their special day...and to clear the dance floor while they both tear it up! We love you, Allie and Matt.
@@ -211,10 +211,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/alex_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/alex_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8 whitetext">
+					        <div class="col-lg-7 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -224,10 +224,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/danielle_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/danielle_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8 whitetext">
+					        <div class="col-lg-7 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -237,10 +237,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/mathewson_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/mathewson_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8 whitetext">
+					        <div class="col-lg-7 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -250,10 +250,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8 whitetext">
+					        <div class="col-lg-7 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -263,10 +263,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/webb_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/webb_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8 whitetext">
+					        <div class="col-lg-7 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -276,10 +276,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/layne_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/layne_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8 whitetext">
+					        <div class="col-lg-7 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -289,10 +289,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/meghan_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/meghan_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8 whitetext">
+					        <div class="col-lg-7 whitetext">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -316,10 +316,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/pat_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/pat_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-7">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -329,10 +329,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-7">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -342,10 +342,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-7">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -355,10 +355,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/justin_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/justin_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-7">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -368,10 +368,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/daniels_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/daniels_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-7">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -381,10 +381,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/davis_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/davis_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-7">
 					            <p>I feel like it's rare that you can remember the first time you saw someone that isn't a romantic connection, but I can vividly recall when I first saw Slocum with Matt Daniels at a bus stop waiting to go to frats during the first few days at Penn State - you couldn't miss this odd couple. Soon, Slocum was my pledge class president as we pledged at Sig Chi. Little did I know then just how much this guy would change my life...I owe my marriage to him. He helped to set me up with my now wife way back during our Freshman year of college. Stacy and I were both too shy to make a first move, but Slocum the social butterfly had no problem getting us to hang out more often and exchange AOL instant messenger screen names.</p>
 					            <p>Fast forward nine years and Slocum and his then girlfriend Allie were the first of our friends to come visit us in Pittsburgh after the birth of our first child. Not surprising in the least - that is just the type of guy and friend that he is.</p>
 					            <p>During that nine year time gap, there were countless hilarious moments, hundreds of hours of aimless chatting (a few were actually serious), and lots and lots of beer. But best of all, I became lifelong friends with a guy who is always genuine and caring, and is sometimes funny. Best wishes Allie and Matt, and thanks for letting me be part of your celebration.</p>
@@ -396,10 +396,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/timf_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/timf_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-7">
 					            <p>It's hard to believe I met Allie when she was 13 years old--more than half her life ago. As Allie famously said when I married her lovely older sister, Jessi...I am the brother she "never wanted but always had!" She delivered that Maid-of-Honor speech with confidence and punch when she was only 17. And she may not have realized it at the time, but that quote so aptly describes our relationship. As the youngest of four boys, I never had a younger sibling to pick on, much less a younger sister! Allie, you were the unfortunate victim of circumstance! Kidding aside, I felt instantly comfortable with Allie, as so many do. She has a gift. She is hilarious, self-deprecating, fun, disarming, thoughtful, generous, and kind--a genuinely great person. Yes, she may be completely unstable on ice and oddly afraid of seagulls, but let's not draw attention to that. She has been at the center of so many wonderful and momentous memories in my life, but also at the center of simple text messages with video links to silly humor. I am eternally thankful to call her "Sis", to have her as an amazing and loving Aunt to my children (and God Mother to one), and that she ultimately found a partner cut from the same quality material. Matt, I'm honored to be your groomsman and can't wait be your brother-in-law. Wishing you both a life of love and happiness.</p>
 					        </div>
 			</div>
@@ -409,10 +409,10 @@
 					</div>
 			</div>
 			<div class="row">
-					        <div class="col-xs-4">
-								<img class="imgcell" src="assets/img/photos/malloy_320x320.jpg"/>
+					        <div class="col-xs-5 photodiv">
+								<img class="imgcell imagedropshadow" src="assets/img/photos/malloy_320x320.jpg"/>
 					        </div>
-					        <div class="col-lg-8">
+					        <div class="col-lg-7">
 					            <p> your story here</p>
 					        </div>
 			</div>
@@ -442,10 +442,10 @@
 				</div>
 			</div>
 		    <div class="row">
-				<div class="col-xs-4">
-					<img class="imgcell" src="assets/img/photos/opop_320x320.jpg"/>
+				<div class="col-xs-5 photodiv">
+					<img class="imgcell imagedropshadow" src="assets/img/photos/opop_320x320.jpg"/>
 				</div>
-				<div class="col-lg-8 whitetext">
+				<div class="col-lg-7 whitetext">
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 					Phone <a href="tel:2026951100">(202) 695-1100</a> <br/>
 					Website <a href="https://www.trumphotels.com/washington-dc/luxury-washington-dc-hotels">Click Here</a> <br/>
@@ -459,10 +459,10 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-4">
-					<img class="imgcell" src="assets/img/photos/hyatt_320x320.jpg"/>
+				<div class="col-xs-5 photodiv">
+					<img class="imgcell imagedropshadow" src="assets/img/photos/hyatt_320x320.jpg"/>
 				</div>
-				<div class="col-lg-8 whitetext">
+				<div class="col-lg-7 whitetext">
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 					Phone <a href="tel:2025821234">(202) 582-1234</a><br/>
 					Website <a href="https://washingtondc.grand.hyatt.com/en/hotel/home.html">Click Here</a> <br/>
@@ -476,10 +476,10 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-4">
-					<img class="imgcell" src="assets/img/photos/marriott_320x320.jpg"/>
+				<div class="col-xs-5 photodiv">
+					<img class="imgcell imagedropshadow" src="assets/img/photos/marriott_320x320.jpg"/>
 				</div>
-				<div class="col-lg-8 whitetext">
+				<div class="col-lg-7 whitetext">
 					<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 					Phone <a href="tel:2023932000">(202) 393-2000</a><br/>
 					Website <a href="http://www.marriott.com/hotels/travel/wasjw-jw-marriott-washington-dc/">Click Here</a> <br/>
@@ -579,21 +579,17 @@
 		</div>
 		<div class="container-fluid fullsection">
 			<div class="row">
-				<div class="col-lg-8 col-lg-offset-1">
-					<h3>Ann Sandra</h3>
-					<p><a href="#">stuff here</a></p>
+				<div class="col-sm-4 photodiv">
+					<br/>
+					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/annsandra.png"/></a></p>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-1">
-					<h3>Pottery Barn</h3>
-					<p><a href="#">stuff here</a></p>
+				<div class="col-sm-4 photodiv">
+					<br/>
+					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/williamssonoma.png"/></a></p>
 				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-8 col-lg-offset-1">
-					<h3>Williams & Sonoma</h3>
-					<p><a href="#">stuff here</a></p>
+				<div class="col-sm-4 photodiv">
+					<br/>
+					<p><a href="#"><img class="imgcell imagedropshadow" src="assets/img/potterybarn.jpg"/></a></p>
 				</div>
 			</div>
 		</div>
